# berni

./: .env  .gitignore  CITATION.cff  README.md  TODO.md  agent_test.py  dig.py  docker-compose.mlflow.yaml  fix_incomplete.py  graph_viz.py  grid_viz.py  grid_viz_runs.py  mistral_hf_test.py  mistral_test.py  phi_test.py  play.py  ppo_test.py  pyproject.toml  stich_metrics.py
agent_survey/: agression.csv  buss_perry.csv
berni/: __init__.py
berni/agent/: __init__.py  llm.py  riot.py
berni/assesment/: __init__.py  agent.py  allowed_answers.py  quiz.py
berni/core/: config.py
berni/environment/: llm.py
berni/investigation/: base.py
berni/ps/: __init__.py  barbasi_albert.py  base_graph.py  base_grid.py  erdos_renyi.py  grid.py  random.py  structured.py  watts_stogartz.py
berni/strategy/: __init__.py  crisis_prompt_strategy.py  prompt_strategy.py  riot_prompt_strategy.py
berni/swarm/: __init__.py  abs.py  prompt.py
berni/utils/: __init__.py  game_setup.py  init_sim.py  llm_builder.py  parse_args.py
game_setup/: monks.yaml  monks_big.yaml  monks_big_high.yaml  monks_high.yaml  monks_low.yaml
game_setup/crisishero/: llama3.yaml  mistral.yaml
game_setup/monks/: big_low.yaml  high_llama3.yaml  high_mistral.yaml  high_mistral_ba.yaml  high_mistral_er.yaml  high_mistral_grid.yaml  high_mistral_ws.yaml  low_gpt3.5.yaml  low_llama3.yaml  low_mistral.yaml  low_mistral_ba.yaml  low_mistral_er.yaml  low_mistral_grid.yaml  low_mistral_ws.yaml
mlflow_docker/: requirements.txt
mlruns/0/: meta.yaml
nypd/: __init__.py
nypd/agent/: base.py  (+6 more)
wandb/: latest-run
(+322 files in other folders)
