[tool.poetry]
name = "berni"
version = "0.1.0"
description = ""
authors = ["Zak Davydov <zakharchk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
wandb = "^0.15.12"
langchain = "^0.1.11"
numpy = "^1.26.1"
matplotlib = "^3.8.1"
tqdm = "^4.66.1"
pydantic = "^2.4.2"
pytest = "^7.4.3"
mlflow = "^2.8.0"
boto3 = "^1.28.76"
python-dotenv = "^1.0.0"
seaborn = "^0.13.0"
mpld3 = "^0.5.9"
statsmodels = "^0.14.0"
jupyterlab = "^4.0.7"
pydantic-settings = "^2.0.3"
openai = "1.30.0"
imageio = "^2.34.0"
colorcet = "^3.1.0"
networkx = "^3.2.1"
llama-cpp-python = "^0.2.61"
langchain-community = "^0.0.33"
transformers = "^4.39.3"
torch = "^2.2.2"
accelerate = "^0.29.2"
langchain-openai = "^0.1.6"
pygraphviz = "1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
